--- a/src/style.css
+++ b/src/style.css
@@ -4,8 +4,8 @@
   --color-primary: #457b9d;
   --color-secondary: #18e6ed;
   --color-accent: #e63946;
-  --color-headings: hsl(215, 50%, 23%);
-  --color-body: hsl(215, 50%, 33%);
+  --color-headings: #111111;
+  --color-body: #333;
   --color-body-darker: #5c5577;
   --color-border: #ccc;
   --border-radius: 50px;
@@ -29,7 +29,7 @@ html {
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 2.4rem;
+  font-size: 2rem;
   line-height: 1.5;
   color: var(--color-body);
 }
@@ -41,10 +41,11 @@ h3 {
   line-height: 1.1;
 }
 h1 {
-  font-size: 7rem;
+  font-size: 5rem;
 }
 h2 {
-  font-size: 4rem;
+  font-size: 3rem;
+  font-weight: 500;
 }
 h3 {
   font-size: 3rem;
